# statsbot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  bot.py  dao.py  docker-compose.yml  handlers.py  main.py  models.py  pyproject.toml  server.conf  service.py  settings.py  startup.sh  telegram_client.py  utils.py
bot/: __init__.py  bot.py  client.py  models.py
bot_api/: client.py
db/: database.py  ingester.py  schema.py
service/: chat_service.py  stats_collector.py  stats_reporter.py  stats_saver.py  stats_service.py
statsbot/: bot.py  dao.py  dto.py  main.py  settings.py
statsbot/bot_api/: client.py  models.py
statsbot/db/: __init__.py  database.py
statsbot/handlers/: __init__.py  base.py  handlers.py  registry.py  utils.py
statsbot/service/: chat_service.py  exceptions.py  stats_collector.py  stats_service.py
