[tool.poetry]
name = "statsbot"
version = "0.1.0"
description = "Telegram bot for collecting involvement statistics in telegram channels"
authors = ["Evgeny Kartavykh <longedok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Telethon = "^1.32"
httpx = "^0.25"
psycopg = {extras = ["binary"], version = "^3.1"}
questdb = "^1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
